# my-openenv

./: .gitignore  DEPLOYMENT.md  Dockerfile  QUICKREF.md  README.md  SUBMISSION_CHECKLIST.md  app.py  client.py  desktop.ini  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run.py
cyber_investigator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/: Dockerfile  app.py  environment.py
